Document how to bootstrap a dev environment.

--- a/README.rdoc
+++ b/README.rdoc
@@ -7,19 +7,71 @@ Things you may want to cover:
 
 * Ruby version
 
+We use ruby 2.1. To install the correct ruby version first install rvm and then ruby:
+
+```bash
+### Download and install rvm in your home directory: (in ~/.rvm)
+$ \curl -sSL https://get.rvm.io | bash -s stable
+### Then load RVM in your shell: (and all other open terminals you might want to
+# use RVM on)
+$ source ~/.rvm/scripts/rvm
+### Install correct version of ruby:
+$ rvm install ruby-2.1.5 -v
+```
+
 * System dependencies
+
+We need a few gems to run. To install these gems first go to the same path as
+ this file is at (root of the project) and run:
+```
+$ gem install bundler
+$ bundle install
+```
+
+This will read Gemfile/Gemfile.lock, resolve all dependencies and install
+ all gems correctly.
 
 * Configuration
 
+There is currently no special configuration needed to get the application running.
+
 * Database creation
+
+```
+$ rake db:create
+```
 
 * Database initialization
 
+```
+$ rake db:migrate
+```
+
+* Starting the server (development)
+
+```
+$ rails server
+### or a shorthand for the command:
+$ rails s
+```
+
+You can then point your browser to localhost:3000 and see the app in action.
+
+Note: the server is smart enough so that you never need to restart it for any
+ changes in the filesystem to take effect. So, no need for restarts when
+ developing.
+
 * How to run the test suite
+
+No tests are currently available.
 
 * Services (job queues, cache servers, search engines, etc.)
 
+None for now.
+
 * Deployment instructions
+
+Will probably be deployed via capistrano. For now, there is no deployment.
 
 * ...
 
