--- a/config/locales/devise.nb.yml
+++ b/config/locales/devise.nb.yml
@@ -1,60 +1,61 @@
 # Additional translations at https://github.com/plataformatec/devise/wiki/I18n
+# Translation from: https://gist.github.com/badeball/4978170
 
 nb:
   devise:
     confirmations:
       confirmed: "Oversett meg! Your email address has been successfully confirmed."
-      send_instructions: "Oversett meg! You will receive an email with instructions for how to confirm your email address in a few minutes."
-      send_paranoid_instructions: "Oversett meg! If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
+      send_instructions: "Du vil innen få minutter motta en epost med instruksjoner for å aktivere din konto."
+      send_paranoid_instructions: "Hvis epostadressen din finnes i vår database vil du innen få minutter motta en epost med instruksjoner for å aktivere din konto."
     failure:
-      already_authenticated: "Oversett meg! You are already signed in."
-      inactive: "Oversett meg! Your account is not activated yet."
-      invalid: "Oversett meg! Invalid %{authentication_keys} or password."
-      locked: "Oversett meg! Your account is locked."
-      last_attempt: "Oversett meg! You have one more attempt before your account is locked."
-      not_found_in_database: "Oversett meg! Invalid %{authentication_keys} or password."
-      timeout: "Oversett meg! Your session expired. Please sign in again to continue."
-      unauthenticated: "Oversett meg! You need to sign in or sign up before continuing."
-      unconfirmed: "Oversett meg! You have to confirm your email address before continuing."
+      already_authenticated: "Du er allerede logget inn."
+      inactive: "Din konto er ikke aktivert enda."
+      invalid: "Epostadresse eller passord er ikke gyldig."
+      invalid_token: "Ugyldig autentiserings-token."
+      locked: "Din konto er låst."
+      not_found_in_database: "Ugyldig epost eller passord."
+      timeout: "Din sesjon er utløpt. Logg inn igjen for å kunne fortsette."
+      unauthenticated: "Du må logge inn eller registrere deg for å kunne fortsette."
+      unconfirmed: "Du må bekrefte kontoen din for å kunne fortsette."
     mailer:
       confirmation_instructions:
-        subject: "Oversett meg! Confirmation instructions"
+        subject: "Bekreftelsesinstruksjoner"
       reset_password_instructions:
-        subject: "Oversett meg! Reset password instructions"
+        subject: "Nullstilling av passord"
       unlock_instructions:
-        subject: "Oversett meg! Unlock instructions"
+        subject: "Gjenåpning av konto"
     omniauth_callbacks:
-      failure: "Oversett meg! Could not authenticate you from %{kind} because \"%{reason}\"."
-      success: "Oversett meg! Successfully authenticated from %{kind} account."
+      failure: "Kunne ikke autorisere deg fra %{kind} fordi \"%{reason}\"."
+      success: "Vellykket autorisering fra %{kind}."
     passwords:
-      no_token: "Oversett meg! You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
-      send_instructions: "Oversett meg! You will receive an email with instructions on how to reset your password in a few minutes."
-      send_paranoid_instructions: "Oversett meg! If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
-      updated: "Oversett meg! Your password has been changed successfully. You are now signed in."
-      updated_not_active: "Oversett meg! Your password has been changed successfully."
+      no_token: "Du kan ikke aksessere denne siden uten å bli videresendt fra en epost med intrukssjoner for å tilbakestille passord. Hvis dette er tilfelle, vennligst sørg for at du brukte hele lenken inneholdt i eposten."
+      send_instructions: "Du vil innen få minutter motta en epost med instruksjoner for å nullstille passordet ditt."
+      send_paranoid_instructions: "Hvis epostadressen din finnes i vår database vil du innen få minutter motta en epost med instruksjoner for å nullstille passordet ditt."
+      updated: "Ditt passord er endret og du er nå innlogget."
+      updated_not_active: "Ditt passord er endret."
     registrations:
-      destroyed: "Oversett meg! Bye! Your account has been successfully cancelled. We hope to see you again soon."
-      signed_up: "Oversett meg! Welcome! You have signed up successfully."
-      signed_up_but_inactive: "Oversett meg! You have signed up successfully. However, we could not sign you in because your account is not yet activated."
-      signed_up_but_locked: "Oversett meg! You have signed up successfully. However, we could not sign you in because your account is locked."
-      signed_up_but_unconfirmed: "Oversett meg! A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
-      update_needs_confirmation: "Oversett meg! You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirm link to confirm your new email address."
-      updated: "Oversett meg! Your account has been updated successfully."
+      destroyed: "Farvel! Din konto er nå slettet. Vi håper å se deg igjen snart."
+      signed_up: "Velkommen! Din registrering er vellykket."
+      signed_up_but_inactive: "Du er registrert. Vi kan derimot ikke logge deg på siden kontoen din ennå ikke er aktivert."
+      signed_up_but_locked: "Du er registrert. Vi kan derimot ikke logge deg på siden kontoen din er låst."
+      signed_up_but_unconfirmed: "En epost med en aktiveringslink er sent til din epostadresse.  Vennligst klikk på linken for å aktivere din konto."
+      update_needs_confirmation: "Din profil er oppdatert, men vi trenger å bekrefte din nye epost-adresse. Vennligst sjekk din innboks og klikk på lenken inneholdt i eposten for å bekrefte endring av din epost-adresse."
+      updated: "Din profil er oppdatert."
     sessions:
-      signed_in: "Oversett meg! Signed in successfully."
-      signed_out: "Oversett meg! Signed out successfully."
-      already_signed_out: "Oversett meg! Signed out successfully."
+      signed_in: "Du er nå innlogget."
+      signed_out: "Du er nå logget ut."
+      already_signed_out: "Du er nå logget ut."
     unlocks:
-      send_instructions: "Oversett meg! You will receive an email with instructions for how to unlock your account in a few minutes."
-      send_paranoid_instructions: "Oversett meg! If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
-      unlocked: "Oversett meg! Your account has been unlocked successfully. Please sign in to continue."
+      send_instructions: "Du vil innen få minutter motta en epost med instruksjoner for å gjenåpne din konto."
+      send_paranoid_instructions: "Hvis kontoen din eksisterer vil du innen få minutter motta en epost med instruksjoner for å låse den opp."
+      unlocked: "Din konto er gjenåpnet. Vennligst logg inn for å fortsette."
   errors:
     messages:
-      already_confirmed: "Oversett meg! was already confirmed, please try signing in"
-      confirmation_period_expired: "Oversett meg! needs to be confirmed within %{period}, please request a new one"
-      expired: "Oversett meg! has expired, please request a new one"
-      not_found: "Oversett meg! not found"
-      not_locked: "Oversett meg! was not locked"
+      already_confirmed: "har allerede blitt bekreftet, forsøk å logg inn"
+      confirmation_period_expired: "må bekreftes innen %{period}, vennligst forespør en ny en"
+      expired: "har utløpt, vennligst få en ny en"
+      not_found: "ikke funnet"
+      not_locked: "var ikke låst"
       not_saved:
-        one: "Oversett meg! 1 error prohibited this %{resource} from being saved:"
-        other: "Oversett meg! %{count} errors prohibited this %{resource} from being saved:"
+        one: "Én feil gjorde at %{resource} ikke kunne lagres:"
+        other: "%{count} feil gjorde at %{resource} ikke kunne lagres:"
