Added translation for when trying to book over an already booked time interval

--- a/config/locales/gems.nb.yml
+++ b/config/locales/gems.nb.yml
@@ -7,5 +7,5 @@ nb:
         booking:
           attributes:
             starts_at:
-              overlap: '...(Oversett meg!!) DateTime range overlaps with previously booked items.'
+              overlap: "sammenfaller med en annen booking."
 
