Stop confusion, better term for insuranse of tractor

--- a/config/locales/views/ads/nb.yml
+++ b/config/locales/views/ads/nb.yml
@@ -3,4 +3,4 @@ nb:
   car: 'Bil'
   caravan: 'Campingvogn eller Tilhenger'
   scooter: 'Moped, ATV eller Snøscooter'
-  tractor: 'Traktor, Gressklipper eller Snøfreser'
+  tractor: 'Traktor'
