Cleaned up payment page a bit

--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -5,7 +5,7 @@ nb:
 
   time:
     formats:
-      plendit_short_date: '%d. %b %Y'
+      plendit_short_date: '%d.%m.%Y'
       plendit_short_datetime: '%d.%m.%Y klokka %H.%M'
       default: '%d.%m.%Y klokka %H.%M'
       shorter_datetime: '%d.%m.%Y kl. %H.%M'
