Add veteranbil as a category, and insurance documents which are relevant

--- a/config/locales/views/ads/nb.yml
+++ b/config/locales/views/ads/nb.yml
@@ -4,3 +4,4 @@ nb:
   caravan: 'Campingvogn eller Tilhenger'
   scooter: 'Moped, ATV eller Snøscooter'
   tractor: 'Traktor'
+  vintage_car: 'Veteranbil'
