--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -10,6 +10,10 @@ nb:
       default: '%d.%m.%Y klokka %H.%M'
       shorter_datetime: '%d.%m.%Y kl. %H.%M'
 
+  date:
+    formats:
+      plendit_short_date: '%d.%m.%Y'
+
   helpers:
     submit:
       booking:
