fix prosa for boat deductible. string from i18n.

--- a/config/locales/views/ads/nb.yml
+++ b/config/locales/views/ads/nb.yml
@@ -5,3 +5,5 @@ nb:
   scooter: 'Moped, ATV eller Snøscooter'
   tractor: 'Traktor'
   vintage_car: 'Veteranbil'
+  read_more_here: 'Les mer her'
+  owner_has_deductible_for_boat: 'På grunn av høy verdi på båten, har du som utleier en egenandel ved skade.'
