remove prosa about deductible. (as boats now have deductible).

--- a/config/locales/views/misc/nb.yml
+++ b/config/locales/views/misc/nb.yml
@@ -11,6 +11,4 @@ nb:
         heading: 'Skadeforsikring fra If'
         link: 'Les mer om forsikring'
         copy: |
-          Slipp alle bekymringer. Alt du leier ut på Plendit blir forsikret
-          av If og ved en skade har du som utleier ingen egenandel.
- 
+          Slipp alle bekymringer. Alt du leier ut på Plendit blir forsikret av If.
