--- a/config/locales/views/misc/nb.yml
+++ b/config/locales/views/misc/nb.yml
@@ -3,7 +3,7 @@ nb:
     frontpage:
       splash_title: 'LEI DET DU TRENGER'
       search_term_placeholder: 'Hva vil du leie?'
-      rent_out_button: 'Lei ut tingene dine her'
+      rent_out_button: 'Leg ut til leie'
       request_item_button: 'Legg ut ønsker leid'
       explainer_video_summary: 'Se hvordan Plendit fungerer'
       see_all_ads_button: 'Se alle annonsene'
