--- a/config/locales/views/misc/nb.yml
+++ b/config/locales/views/misc/nb.yml
@@ -1,7 +1,7 @@
 nb:
   misc:
     frontpage:
-      splash_title: 'HVA VIL DU LEIE?'
+      splash_title: 'MARKEDSPLASS FOR UTLEIE'
       search_term_placeholder: 'Hva vil du leie?'
       rent_out_button: 'Legg ut til leie'
       see_all_ads_button: 'Se alle annonsene'
@@ -10,10 +10,10 @@ nb:
       see_all_ads_button: 'Se alle annonsene'
       selected_ads_heading: 'Utvalgte annonser'
       pricing:
-        title: 'Hvor mye koster å bruke plendit?'
+        title: 'Hva koster det å bruke Plendit?'
         body: |
-          Det koster ingenting å legge ut annonse. Om du godkjenne en forspørsel da plendit beholder
-          %{price_in_percent}% av leiesummen.
+          Det koster ingenting å legge ut en annonse. Om du leier ut noe via Plendit, koster det %{price_in_percent}% av leiesummen for å dekke forsikring og administrasjonsgebyr.  
+          
       if_branding:
         heading: 'Skadeforsikring fra If'
         link: 'Les mer om forsikring'
@@ -31,6 +31,6 @@ nb:
       title: 'Fant du ikke det du ønsker å leie?'
       button: 'Legg ut ønsker leid'
       copy: |
-        Registrer hva du ønsker å leie så vidreformidler vi ønsket ditt
+        Registrer hva du ønsker å leie, så videreformidler vi ønsket ditt
         til våre medlemmer. Vi sender deg en e-post om noen legger ut
         det du er ute etter.
