Added form stuff for wanted

--- a/config/locales/views/wanted_item_request/nb.yml
+++ b/config/locales/views/wanted_item_request/nb.yml
@@ -6,6 +6,8 @@ nb:
       place_label: 'Hvor?'
       email_label: 'E-post'
       item_label: 'Hva?'
+      when_label: 'Når?'
+      optional_label: 'Valgfritt'
       copy: |
         Her kan du legge inn ting du kunne tenke deg å
         leie. Vi videreformidler ønsket ditt
