Thanks page prose / style

--- a/config/locales/views/wanted_item_request/nb.yml
+++ b/config/locales/views/wanted_item_request/nb.yml
@@ -17,5 +17,5 @@ nb:
     thanks:
       title: 'Takk for hjelpen!'
       copy: |
-        Nå blir det enklere for oss å oppmuntre
-        brukerne til å legge ut akurat det du trenger!
+        Nå blir det enklere for oss å sørge for at akurat det du
+        trenger blir lagt ut på Plendit.
